Add monkey emoji/icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="./monkey-face.png">
     
     <link rel="stylesheet" href="style.css">
 
@@ -21,7 +21,7 @@
   </head>
   <body><br><br><br>
     <div class="container">
-      <h1>Infinite Virtual Monkeys</h1><br>
+      <h1>🐵 Infinite Virtual Monkeys 🐒</h1><br>
       <blockquote class="blockquote text-center">
         <p class="mb-0">If an army of monkeys were strumming on typewriters,<br>they might write all the books in the British Museum.</p>
         <footer class="blockquote-footer">Arthur Eddington, <cite title="Source Title">The Nature of the Physical World</cite></footer>
