Adjust mobile spacing

--- a/single.html
+++ b/single.html
@@ -23,7 +23,7 @@
     <div class="container">
       <h1>🐵 Infinite Virtual Monkeys 🐒</h1><br>
       <blockquote class="blockquote text-center">
-        <p class="mb-0">If an army of monkeys were strumming on typewriters,<br>they might write all the books in the British Museum.</p>
+        <p class="mb-0 col-12">If an army of monkeys were strumming on typewriters, they might write all the books in the British Museum.</p>
         <footer class="blockquote-footer">Arthur Eddington, <cite title="Source Title">The Nature of the Physical World</cite></footer>
       </blockquote>
       <noscript>
@@ -39,7 +39,7 @@
             <label class="sr-only" for="input">Input</label>
             <input onkeyup="moveText()" type="text" class="form-control mb-2" placeholder="Type here" autocomplete="off" id="input">
           </div>
-          <div class="col-auto">
+          <div class="col-2">
             <button type="reset" class="btn btn-primary mb-2" id="clear">Clear</button>
           </div>
         </div>
@@ -48,7 +48,7 @@
             <label class="sr-only" for="output">Output</label>
             <input type="text" class="form-control form-control-plaintext mb-2" placeholder="Randomized text" id="output" disabled>
           </div>
-          <div class="col-auto">
+          <div class="col-2">
             <button onclick="monkeySingle()" type="button" class="btn btn-primary mb-2">Strum</button>
           </div>
         </div>
