--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
       <p class="text-center"><strong>Monkey mode</strong> | <a href="./single.html">Single-character mode</a></p>
       <form>
         <div class="form-row justify-content-center">
-          <div class="col-auto">
+          <div class="col-10">
             <label class="sr-only" for="input">Input</label>
             <input onkeyup="moveText()" type="text" class="form-control mb-2" id="input" placeholder="Type here" autocomplete="off">
           </div>
-          <div class="col-auto">
+          <div class="col-2">
             <button type="reset" class="btn btn-primary mb-2" id="clear">Clear</button>
           </div>
         </div>
         <div class="form-row justify-content-center">
-          <div class="col-auto">
+          <div class="col-10">
             <label class="sr-only" for="output">Output</label>
             <input type="text" class="form-control form-control-plaintext mb-2" id="output" placeholder="Randomized text" disabled>
           </div>
-          <div class="col-auto">
+          <div class="col-2">
             <button onclick="monkeys()" type="button" class="btn btn-primary mb-2">Strum</button>
           </div>
         </div>
